Changing to AGOY INFO MORE

--- a/test.html
+++ b/test.html
@@ -1,3 +1,19 @@
-<h1>LO JANGAN OMONGIN SOLADRITAS</h1>
-<p>Apa sih solidaritas?</p>
-<a href="https://www.youtube.com/watch?v=wYLtqfrZ1Vo" target="_blank" title="lets go to AGOY"> Solidaritas!</a>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Agoy Is My Man</title>
+</head>
+
+<body>
+    <h1>LO JANGAN OMONGIN SOLADRITAS</h1>
+    <p>??Apa sih <b>solidaritas??</b></p>
+    
+    <a href="https://www.youtube.com/watch?v=wYLtqfrZ1Vo" target="_blank" title="lets go to AGOY"> Solidaritas tuh ini!</a>
+   <p>Agoy adalah:<br>
+       Anak Jaktim solidaritas
+   </p>
+    <img src="https://i.ytimg.com/vi/9Ucew2i5H0o/hqdefault.jpg">    
+</body>
+
+</html>
