--- a/test.html
+++ b/test.html
@@ -6,13 +6,17 @@
 </head>
 
 <body>
-    <h1>LO JANGAN OMONGIN SOLADRITAS</h1>
-    <p>??Apa sih <b>solidaritas??</b></p>
+    <h1>LO JANGAN OMONGIN SOLADRITAS YA KALO MASIH GINI</h1>
+    <p>Apa sih itu artinya <b>solidaritas??</b></p>
     
-    <a href="https://www.youtube.com/watch?v=wYLtqfrZ1Vo" target="_blank" title="lets go to AGOY"> Solidaritas tuh ini!</a>
-   <p>Agoy adalah:<br>
-       Anak Jaktim solidaritas
-   </p>
+    <p><b>Agoy adalah:</b><br>
+        - Anak Jaktim solidaritas<br>
+        - Solidaritas nomor 1<br>
+        - Agoy is golden way<br>
+        - Mr lifestyle candidate
+    </p>
+    <a href="https://www.youtube.com/watch?v=wYLtqfrZ1Vo" target="_blank" title="lets go to AGOY"><b>Solidaritas tuh ini!</b></a>
+    
     <img src="https://i.ytimg.com/vi/9Ucew2i5H0o/hqdefault.jpg">    
 </body>
 
